# ninja-ci-cd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  labeler.yml
.github/workflows/: cd.yml  ci.yml  nightly.yml  pr-checks.yml
docs/: PIPELINE.md
src/ninja/: __init__.py  app.py  core.py  skills.py
tests/: __init__.py  test_app.py  test_core.py  test_skills.py
